--- a/src/components/Home/components/_apresentacao.scss
+++ b/src/components/Home/components/_apresentacao.scss
@@ -6,6 +6,12 @@
     grid-template-columns: 1fr 1fr;
     padding: 80px 0;
     gap: 20px;
+
+    @include mq(850) {
+      @include display-flex($f: column-reverse);
+      gap: 70px;
+      padding-bottom: 40px;
+    }
   
     .list-with-icons {
       display: grid;
