--- a/src/css/_vars.scss
+++ b/src/css/_vars.scss
@@ -1,8 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap');
 
 $type-first: "Roboto Mono", monospace;
 $type-second: "Pacifico", cursive;
+$type-third: "Roboto Condensed", sans-serif;
 
 $color-type: #F5F4F8;
 
@@ -13,15 +15,4 @@ $color-four: #131439;
 
 $color-white: #ffffff;
 $color-black: #000000;
-
-
-
-
-
-// $color-five: #6c4f14;
-
-$color-six: #eee;
-
-
-$color-eight: #e4191f;
 
