--- a/src/components/Utils/_image-zoom.scss
+++ b/src/components/Utils/_image-zoom.scss
@@ -19,8 +19,17 @@
       max-height: 80vh;
       cursor: initial;
 
+      @include mq(600) {
+        padding: 10px;
+        border-radius: 5px;
+      }
+
       img {
         border-radius: 10px;
+
+        @include mq(600) {
+          border-radius: 5px;
+        }
       }
     }
   }
@@ -33,9 +42,5 @@
       border-radius: 5px;
       transition: .3s;
     }
-
   }
-
-
-
 }
