--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -13,3 +13,7 @@
 @import "../components/Footer/footer";
 @import "../components/Utils/utils";
 @import "../components/Utils/image-zoom";
+
+@import "../components/Creation/creation";
+@import "../components/Creation/components/Intro/intro";
+@import "../components/Creation/components/Form/form";
