--- a/src/components/Utils/_image-zoom.scss
+++ b/src/components/Utils/_image-zoom.scss
@@ -12,24 +12,30 @@
     cursor: zoom-out;
 
     .container-modal-image-zoom {
+      position: relative;
       background-color: $color-white;
-      padding: 20px;
-      border-radius: 10px;
+      padding: 10px;
+      border-radius: 5px;
       max-width: 80vw;
       max-height: 80vh;
       cursor: initial;
 
-      @include mq(600) {
-        padding: 10px;
+      img {
         border-radius: 5px;
       }
 
-      img {
-        border-radius: 10px;
-
-        @include mq(600) {
-          border-radius: 5px;
-        }
+      .button-close-modal {
+        position: absolute;
+        right: 0;
+        top: 0;
+        transform: translate(50%, -50%);
+        background: $color-white;
+        border-radius: 100%;
+        color: $color-one;
+        width: size(40);
+        height: size(40);
+        @include display-flex();
+        cursor: pointer;
       }
     }
   }
