created radio input function

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -17,3 +17,5 @@
 @import "../components/Creation/creation";
 @import "../components/Creation/components/Intro/intro";
 @import "../components/Creation/components/Form/form";
+
+@import "../components/Personalize/personalize";
