created the entire basic structure for the resume generator

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -13,9 +13,12 @@
 @import "../components/Footer/footer";
 @import "../components/Utils/utils";
 @import "../components/Utils/image-zoom";
+@import "../components/Utils/FormElements/form-elements";
 
 @import "../components/Creation/creation";
 @import "../components/Creation/components/Intro/intro";
 @import "../components/Creation/components/Form/form";
 
 @import "../components/Personalize/personalize";
+@import "../components/Personalize/components/Form/form-personalize";
+@import "../components/Generate/generate";
