created navigation buttons. Created mask for phones. Added new fields to fill out.

--- a/src/components/Creation/_creation.scss
+++ b/src/components/Creation/_creation.scss
@@ -1,10 +1,5 @@
 .creation {
   background: linear-gradient(30deg, $color-three 0%, $color-four 100%);
   margin-top: $header-height;
-
-  .container-creation {
-    min-height: calc(100vh - (2 * 80px));
-  }
+  min-height: calc(100vh - $header-height - $footer-height);
 }
-
-  
