--- a/src/components/Footer/_footer.scss
+++ b/src/components/Footer/_footer.scss
@@ -6,6 +6,6 @@ footer {
     @include display-flex($j: start);
     @include fontSize(20);
     color: $color-type;
-    height: 80px;
+    height: $footer-height;
   }
 }
