--- a/src/components/Personalize/_personalize.scss
+++ b/src/components/Personalize/_personalize.scss
@@ -1,10 +1,10 @@
 .personalize {
   background: linear-gradient(30deg, $color-three 0%, $color-four 100%);
   margin-top: $header-height;
+  min-height: calc(100vh - $header-height - $footer-height);
 
   .container-personalize {
-    min-height: calc(100vh - (2 * 80px));
+    @include container();
+    margin: 40px 0;
   }
 }
-
-  
