added work experience container generator

--- a/src/components/Creation/components/Form/_form.scss
+++ b/src/components/Creation/components/Form/_form.scss
@@ -32,7 +32,7 @@
     margin: 2px 0 0 0;
   }
 
-  .grid-form-01 {
+  .grid-form {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 0 30px;
