created new form page. Organization of sections and CSS

--- a/src/components/Creation/_creation.scss
+++ b/src/components/Creation/_creation.scss
@@ -2,4 +2,10 @@
   background: linear-gradient(30deg, $color-three 0%, $color-four 100%);
   margin-top: $header-height;
   min-height: calc(100vh - $header-height - $footer-height);
+
+  .container-creation {
+    @include container();
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
 }
